--- a/FinPlan.Web/Components/Pages/AboutUsNew.razor
+++ b/FinPlan.Web/Components/Pages/AboutUsNew.razor
@@ -1,4 +1,4 @@
-@page "/about-rewealthen-new"
+@page "/about-rewealthen-enw"
 @using Microsoft.AspNetCore.Components.Forms
 @namespace FinPlan.Web.Components.Pages
 
