--- a/FinPlan.Web/Components/Pages/Home.razor
+++ b/FinPlan.Web/Components/Pages/Home.razor
@@ -30,9 +30,9 @@
         }
     }
 </style>
-@page "/"
+@page "/home"
 
-<PageTitle>REWealthen - Financial Planning Made Easy</PageTitle>
+<PageTitle>REWealth-en - Financial Planning Made Easy</PageTitle>
 
 <style>
     /* Summary number/title styling to match other pages */
